ugur-elb-template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  This hands on shows how to create ASG with ELB and LT via CloudFormation template.
Parameters:

  VPC:
    Description: Choose your VPC
    Type: AWS::EC2::VPC::Id

  Subnets:
    Description: Choose at least 2 subnets
    Type: List<AWS::EC2::Subnet::Id>

  EnvParameter:
    Description: Choose your env type
    Type: String
    AllowedValues:
         - prod
         - test

  InstanceType:
    Description: Choose the instance type
    Type: String
    Default: t2.micro
    AllowedValues:
         - t2.micro
         - t3.micro
         - t2.nano

  MyKeyPair:
    Description: Keyname sec
    Type: AWS::EC2::KeyPair::KeyName

Mappings:

  RegionImageMap:
    us-east-1:
      prod: ami-0715c1897453cabd1
      test: ami-0bef6cc322bfff646
    us-east-2:
      prod: ami-01107263728f3bef4
      test: ami-05842f1afbf311a43
    us-west-1:
      prod: ami-0062dbf6b829f04e1
      test: ami-04669a22aad391419
    us-west-2:
      prod: ami-0ab193018f3e9351b
      test: ami-03c7c1f17ee073747
    eu-west-1:
      prod: ami-04f7efe62f419d9f5
      test: ami-0e23c576dacf2e3df


Resources:

 MyASGPolicy:
    Type: AWS::AutoScaling::ScalingPolicy
    Properties:
      AutoScalingGroupName: !Ref MyAutoScale # Required
      PolicyType: TargetTrackingScaling
      TargetTrackingConfiguration:
        PredefinedMetricSpecification:
          PredefinedMetricType: ASGAverageCPUUtilization
        TargetValue: 60.0

 MyAutoScale:
  Type: AWS::AutoScaling::AutoScalingGroup
  Properties:
    AutoScalingGroupName: ugurasgcfn
    DesiredCapacity: 1
    HealthCheckType: ELB
    LaunchTemplate:
      LaunchTemplateId: !Ref MyTemplate
      Version: 1
    MaxSize: 4 # Required
    MinSize: 1 # Required
    TargetGroupARNs: 
      - !Ref MyTargetGroup
    VPCZoneIdentifier: !Ref Subnets

 MyListener:
  Type: AWS::ElasticLoadBalancingV2::Listener
  Properties:
    DefaultActions: # Required
      - TargetGroupArn: !Ref MyTargetGroup
        Type: forward
    LoadBalancerArn: !Ref MyELB
    Port: 80
    Protocol: HTTP

 MyELB:
   Type: AWS::ElasticLoadBalancingV2::LoadBalancer
   Properties:
    Name: ugurloadbalancer
    SecurityGroups: 
      - !GetAtt MySecGrp.GroupId
    Subnets: !Ref Subnets
    Type: application

 MyTemplate:
   Type: AWS::EC2::LaunchTemplate
   Properties:
    LaunchTemplateData:
      ImageId: !FindInMap 
        - RegionImageMap
        - !Ref "AWS::Region"
        - !Ref EnvParameter
      InstanceType: !Ref InstanceType
      KeyName: !Ref MyKeyPair
      SecurityGroupIds:
        - !Ref MySecGrp
      UserData: !Base64 |
        #!/bin/bash
          #update os
          yum update -y
          #install apache server
          yum install -y httpd
          # get private ip address of ec2 instance using instance metadata
          TOKEN=`curl -X PUT "http://169.254.169.254/latest/api/token" -H "X-aws-ec2-metadata-token-ttl-seconds: 21600"` \
          && PRIVATE_IP=`curl -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/local-ipv4`
          # get public ip address of ec2 instance using instance metadata
          TOKEN=`curl -X PUT "http://169.254.169.254/latest/api/token" -H "X-aws-ec2-metadata-token-ttl-seconds: 21600"` \
          && PUBLIC_IP=`curl -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/public-ipv4` 
          # get date and time of server
          DATE_TIME=`date`
          # set all permissions
          chmod -R 777 /var/www/html
          # create a custom index.html file
          echo "<html>
              <head>
              <title> Application Load Balancer</title>
              </head>
              <body>
                  <h1>Testing Application Load Balancer</h1>
                  <h2>Congratulations! You have created an instance from Launch Template</h2>
                  <h3>This web server is launched from the launch template by YesOrrayt via CFN</h3>
                  <p>This instance is created at <b>$DATE_TIME</b></p>
                  <p>Private IP address of this instance is <b>$PRIVATE_IP</b></p>
                  <p>Public IP address of this instance is <b>$PUBLIC_IP</b></p>
              </body>
              </html>" > /var/www/html/index.html
              # start apache server
              systemctl start httpd
              systemctl enable httpd
    LaunchTemplateName: ugurtemplate
    

 MyTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 10
      HealthCheckPath: /
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 3
      IpAddressType: ipv4
      Name: Ugurtargetgrp
      Port: 80
      Protocol: HTTP
      TargetType: instance
      UnhealthyThresholdCount: 2
      VpcId: !Ref VPC
 
 MySecGrp:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SSH and HTTP # Required
      GroupName: ugursecgrp
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      VpcId: !Ref VPC

Outputs:
  DNScfn:
    Description: DNS of ELB
    Value: !Join 
     - ''
     - - 'http://'
       - !GetAtt MyELB.DNSName
